changed the portrait animation slightly and tried to fix spacing in IE

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -160,7 +160,6 @@ height:256px;
   width: 100%;
   height: 460;
   position: relative;
-  display: block;
 }
 
 .the_polaroids {
@@ -187,6 +186,8 @@ height:256px;
 }
 
 .portrait {
+  display: none;
+  width: 275;
   -webkit-box-shadow: #333 2px 2px 3px;
   left: 255;
   top: 0;
@@ -195,8 +196,6 @@ height:256px;
   border-top: 5px solid #eee;
   border-right: 5px solid #eee;
   position:absolute;
-  display: none;
-  width: 275;
   z-index: 0;
 }
 
